# Ligma

./: CMakeLists.txt  Casual.cpp  Casual.h  Employee.cpp  Employee.h  Manager.cpp  Manager.h  Shop.cpp  Shop.h
